Incrementing heap size of the xtend-maven-plugin