@@ -156,8 +156,9 @@
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx16384m</argLine>
-				 	<argLine>-XX:MaxPermSize=8192m</argLine>
+					  <argLine>-Xmx18432m</argLine>
+					  <argLine>-XX:PermSize=2048m</argLine>
+ 					  <argLine>-XX:MaxPermSize=8192m</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
